--- a/src/client/src/thread/view.tpl.html
+++ b/src/client/src/thread/view.tpl.html
@@ -1,6 +1,6 @@
 <!-- target: TPL_thread_view -->
 <div class="thread-view">
   <!-- for: ${emails} as ${email}, ${index} -->
-  <!-- use: TPL_mail_view(email=${email}) -->
+  <!-- use: TPL_mail_view(email=${email},hostname=${hostname}) -->
   <!-- /for -->
 </div>
