支持查看已发送邮件的功能

--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -83,7 +83,11 @@
                 <tr>
                   <th>源文件：</th>
                   <td>
+                    <!-- if: ${email.is_sent} == 1 -->
+                    <a href="http://${hostname}:8765/raw/sent/${email.uidl}.txt" target="_blank">查看</a>
+                    <!-- else -->
                     <a href="http://${hostname}:8765/raw/${email.uidl}.txt" target="_blank">查看</a>
+                    <!-- /if -->
                     &nbsp;|&nbsp;
                     <a href="http://${hostname}:8765/ori/message/${email.uidl}.html" target="_blank">未过滤内容的邮件</a>
                   </td>
