添加只看未读的功能

--- a/src/client/src/dev/index.tpl.html
+++ b/src/client/src/dev/index.tpl.html
@@ -19,10 +19,10 @@
 <hr />
 
 <div data-ui-id="attachments"
-     data-ui-id="box-group-horizontal"
      data-ui-box-type="checkbox"
      data-ui-type="BoxGroup"
      name="attachments"></div>
 
+<div data-ui-id="xyz" data-ui-type="SimpleToggleButton">只看未读</div>
 
 </div>
