--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -30,6 +30,7 @@
             <div class="list-batch">
                 <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">新建</div>
                 <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
+                <div data-ui-type="SimpleToggleButton" data-ui-id="unread-only" >只看未读</div>
                 <!-- &nbsp;|&nbsp; -->
                 <div data-ui-type="Button"
                      data-ui-extension-data-type="CustomData"
