--- a/src/client/src/thread/list.tpl.html
+++ b/src/client/src/thread/list.tpl.html
@@ -1,55 +1,59 @@
 <!-- target: TPL_thread_list -->
-<div class="mail-inbox thread-list">
-    <div class="est-sidebar">
-        <ul>
-            <!-- for: ${navigators} as ${item} -->
-            <!-- if: ${item.active} -->
-            <li class="active"><a href="${item.path}">${item.name}</a></li>
-            <!-- else -->
-            <li><a href="${item.path}">${item.name}</a></li>
-            <!-- /if-->
-            <!-- /for -->
-        </ul>
-    </div>
-    <div class="est-main">
-        <div class="list-header">
-            <div class="list-batch">
-                <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">新建</div>
-                <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
-                <!-- &nbsp;|&nbsp; -->
-                <div data-ui-type="Button"
-                     data-ui-extension-data-type="CustomData"
-                     data-ui-data-type="archive"
-                     data-ui-id="archive"
-                     data-ui-group="batch">归档</div>
-                <div data-ui-type="Button"
-                     data-ui-id="markAsRead"
-                     data-ui-extension-data-type="CustomData"
-                     data-ui-data-type="markAsRead"
-                     data-ui-group="batch">标记已读</div>
-                <div data-ui-type="Button"
-                     data-ui-id="addLabel"
-                     data-ui-extension-data-type="CustomData"
-                     data-ui-data-type="addLabel"
-                     data-ui-group="batch">添加标签</div>
-                <div data-ui-type="Button"
-                     data-ui-id="delete"
-                     data-ui-extension-data-type="CustomData"
-                     data-ui-data-type="delete"
-                     data-ui-group="batch">删除</div>
-            </div>
-            <form data-ui-type="Form" data-ui-id="filter" class="list-filter">
-                <input data-ui-id="keyword"
-                       data-ui-type="TextBox"
-                       data-ui-required="required"
-                       data-ui-width="300"
-                       placeholder="请输入关键词"
-                       name="keyword" />
-                <!-- <div data-ui-type="Button" data-ui-id="search"
-                    data-ui-extension-submit-type="AutoSubmit">搜索</div> -->
-            </form>
-        </div>
-        <!-- import: listTable -->
-        <!-- import: listPager -->
-    </div>
+<div class="mail-inbox mail-search">
+    <!-- import: TPL_thread_list_main -->
 </div>
+
+<!-- target: TPL_thread_list_main(master=TPL_master) -->
+<!-- block: sidebar -->
+<ul>
+    <!-- for: ${navigators} as ${item} -->
+    <!-- if: ${item.active} -->
+    <li class="active"><a href="${item.path}">${item.name}</a></li>
+    <!-- else -->
+    <li><a href="${item.path}">${item.name}</a></li>
+    <!-- /if-->
+    <!-- /for -->
+</ul>
+<!-- /block -->
+<!-- block: main -->
+<div class="list-header">
+    <div class="list-batch">
+        <!-- <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">新建</div> -->
+        <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
+        <!-- &nbsp;|&nbsp; -->
+        <div data-ui-type="Button"
+             data-ui-extension-data-type="CustomData"
+             data-ui-data-type="archive"
+             data-ui-id="archive"
+             data-ui-group="batch">归档</div>
+        <div data-ui-type="Button"
+             data-ui-id="markAsRead"
+             data-ui-extension-data-type="CustomData"
+             data-ui-data-type="markAsRead"
+             data-ui-group="batch">标记已读</div>
+        <div data-ui-type="Button"
+             data-ui-id="addLabel"
+             data-ui-extension-data-type="CustomData"
+             data-ui-data-type="addLabel"
+             data-ui-group="batch">添加标签</div>
+        <div data-ui-type="Button"
+             data-ui-id="delete"
+             data-ui-extension-data-type="CustomData"
+             data-ui-data-type="delete"
+             data-ui-group="batch">删除</div>
+    </div>
+    <form data-ui-type="Form" data-ui-id="filter" class="list-filter">
+        <input data-ui-id="keyword"
+               data-ui-type="TextBox"
+               data-ui-required="required"
+               data-ui-width="300"
+               placeholder="请输入关键词"
+               name="keyword" />
+        <!-- <div data-ui-type="Button" data-ui-id="search"
+            data-ui-extension-submit-type="AutoSubmit">搜索</div> -->
+    </form>
+</div>
+<!-- import: listTable -->
+<!-- import: listPager -->
+<!-- /block -->
+
