支持pop3.delete_older_mails的配置，可以删除指定天数之前的邮件

--- a/src/client/src/thread/list.tpl.html
+++ b/src/client/src/thread/list.tpl.html
@@ -1,5 +1,5 @@
 <!-- target: TPL_thread_list -->
-<div class="mail-inbox mail-search">
+<div class="mail-inbox thread-list">
     <!-- import: TPL_thread_list_main -->
 </div>
 
