简化Inbox界面的UI

--- a/src/client/src/common/master.tpl.html
+++ b/src/client/src/common/master.tpl.html
@@ -1,6 +1,9 @@
 <!-- target: TPL_master -->
 <div class="mail-layout">
     <div class="est-sidebar">
+        <div class="btns">
+            <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">Compose Mail</div>
+        </div>
         <!-- block: sidebar --><!-- /block -->
     </div>
     <div class="est-main">
