--- a/src/client/src/dev/index.tpl.html
+++ b/src/client/src/dev/index.tpl.html
@@ -22,7 +22,11 @@
      data-ui-box-type="checkbox"
      data-ui-type="BoxGroup"
      name="attachments"></div>
+<hr />
 
 <div data-ui-id="xyz" data-ui-type="SimpleToggleButton">只看未读</div>
+<hr />
+
+<div data-ui-id="cm" data-ui-type="CommandMenu"></div>
 
 </div>
