选择邮件All, None, Read, Unread, Starred, Unstarred

--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -39,7 +39,7 @@
 
         <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
 
-        <div data-ui-type="SimpleToggleButton" data-ui-id="unread-only" >只看未读</div>
+        <div data-ui-type="SimpleToggleButton" data-ui-id="unread-only" >未读</div>
 
         <div data-ui-type="CommandMenu"
              data-ui-width="60"
