--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,9 +5,11 @@
     <title>伊妹儿</title>
     <link rel="shortcut icon" href="src/common/img/favicon2.png" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/third-party/zeroclipboard/ZeroClipboard.js"></script>
-    <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/ueditor.config.js"></script>
-    <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/ueditor.all.js"></script>
+    <!-- <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/third-party/zeroclipboard/ZeroClipboard.js"></script>
+    // <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/ueditor.config.js"></script>
+    // <script type="text/javascript" src="src/third_party/ueditor-1.4.3/dist/utf8-php/ueditor.all.js"></script> -->
+    <!-- <script src="//cdn.ckeditor.com/4.4.5/full/ckeditor.js"></script> -->
+    <script src="http://ecma.bdimg.com/public01/email/ckeditor.js"></script>
     <link rel="stylesheet" href="src/common/css/main.less" />
     <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/1-8-2/esl.js"></script>
     <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
