--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="form-row">
-                <script id="email-body-editor" name="content" type="text/plain"></script>
+                <textarea id="email-body-editor"></textarea>
             </div>
         </div>
     </div>
