支持了添加星标的功能

--- a/src/client/src/common/master.tpl.html
+++ b/src/client/src/common/master.tpl.html
@@ -2,7 +2,8 @@
 <div class="mail-layout">
     <div class="est-sidebar">
         <div class="btns">
-            <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">Compose Mail</div>
+            <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">新邮件</div>
+            <div data-ui-type="Button" data-ui-id="createEvent">新事件</div>
         </div>
         <!-- block: sidebar --><!-- /block -->
     </div>
