修复新增和转发附件的问题

--- a/src/client/src/mail/compose.tpl.html
+++ b/src/client/src/mail/compose.tpl.html
@@ -37,6 +37,10 @@
             <div class="form-row">
                 <div class="form-key">附件：</div>
                 <div class="form-value">
+                    <input type="file" multiple id="newAttachment" style="display:none" />
+                    <div data-ui-type="Button"
+                         data-ui-id="addAtt"
+                         data-ui-skin="mini">+</div>
                     <div data-ui-id="attachments"
                          data-ui-id="box-group-horizontal"
                          data-ui-box-type="checkbox"
