--- a/src/client/src/common/master.tpl.html
+++ b/src/client/src/common/master.tpl.html
@@ -3,7 +3,7 @@
     <div class="est-sidebar">
         <div class="btns">
             <div data-ui-type="Button" data-ui-id="create" data-ui-skin="spring-add">新邮件</div>
-            <div data-ui-type="Button" data-ui-id="createEvent">新事件</div>
+            <div data-ui-type="Button" data-ui-id="createEvent" data-ui-disabled="true">新事件</div>
         </div>
         <!-- block: sidebar --><!-- /block -->
     </div>
