Add custom loading notification

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -20,6 +20,8 @@
     </div>
 </div>
 
+<div id="loading" style="display:none"><span>Loading...</span></div>
+
 <div class="main-area">
     <div id="main"></div>
     <div class="copyright">©2014 Baidu</div>
