开始对接百度云的pcs服务，自动把附件存储到
/apps/dropbox/baidu.com/liyubei/${uidl}

ISSUE=IGNORE
TASK=IGNORE
LBID=IGNORE

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,6 +16,8 @@
     <a class="logo" href="#"><img alt="" title="" src="src/common/img/logo.png" width="177" height="34"></a>
     <ul id="nav" class="nav"></ul>
     <div class="user-info">
+        <a href="#/user/settings">用户设置</a>
+        &nbsp;|&nbsp;
         <a href="http://git.baidu.com/baidu/email/issues" target="_blank">Gitlab</a>
     </div>
 </div>
