--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -39,6 +39,8 @@
 
         <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
 
+        <div data-ui-type="Button" data-ui-id="connectNetdisk">网盘授权</div>
+
         <div data-ui-type="SimpleToggleButton" data-ui-id="unread-only" >未读</div>
 
         <div data-ui-type="CommandMenu"
