对于pcs存储失败的文件，可以手工重新上传一下

--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -74,16 +74,16 @@
                         <a data-ui-type="Link" data-ui-id="reply" href="javascript:void(0)">回复</a>
                         &nbsp;|&nbsp;
                         <a data-ui-type="Link" data-ui-id="replyAll" href="javascript:void(0)">全部回复</a>
-                        <!-- if: ${email.attachments.length} -->
-                        &nbsp;|&nbsp;
-                        <a data-ui-disabled="true" data-ui-type="Link" data-ui-id="replyWithAttachments" href="javascript:void(0)">带附件回复</a>
-                        <!-- /if -->
                         &nbsp;|&nbsp;
                         <a data-ui-type="Link" data-ui-id="forward" href="javascript:void(0)">转发</a>
                         &nbsp;|&nbsp;
                         <a data-ui-type="Link" data-ui-id="delete" href="javascript:void(0)">删除</a>
                         &nbsp;|&nbsp;
                         <a data-ui-disabled="true" data-ui-type="Link" data-ui-id="addLabel" href="javascript:void(0)">添加标签</a>
+                        <!-- if: ${email.attachments.length} -->
+                        &nbsp;|&nbsp;
+                        <a data-ui-disabled="true" data-ui-type="Link" data-ui-id="replyWithAttachments" href="javascript:void(0)">带附件回复</a>
+                        <!-- /if -->
                     </span>
                 </td>
             </tr>
@@ -133,9 +133,10 @@
             <tr>
               <th>附件：</th>
               <td>
-                  <!-- for: ${email.attachments} as ${item}, ${index} -->
-                  <a href="${item.preview_url}" target="_blank">${item.name} (${item.size})</a>&nbsp;&nbsp;
-                  <!-- /for -->
+                    <i id="pcs-retry" class="fa fa-cloud-upload" title="重新上传"></i>
+                    <!-- for: ${email.attachments} as ${item}, ${index} -->
+                    <a href="${item.preview_url}" target="_blank">${item.name} (${item.size})</a>&nbsp;&nbsp;
+                    <!-- /for -->
               </td>
             </tr>
             <!-- /if -->
