--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,8 @@
     <title>伊妹儿</title>
     <link rel="shortcut icon" href="src/common/img/favicon2.png" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="stylesheet" href="src/common/css/main.less" />
+    <link rel="stylesheet" type="text/css" href="src/third_party/font-awesome/4.2.0/css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" href="src/common/css/main.less" />
     <script src="src/third_party/jquery/jquery.js"></script>
     <script src="src/third_party/ckeditor/ckeditor.js"></script>
     <script src="src/third_party/esl/esl.js"></script>
