调整页面的样式，尽可能的使用font-awesome的样式

--- a/src/client/src/mail/inbox.tpl.html
+++ b/src/client/src/mail/inbox.tpl.html
@@ -37,9 +37,9 @@
              data-ui-width="60"
              data-ui-id="cm"></div>
 
-        <div data-ui-type="Button" data-ui-id="refresh">刷新</div>
+        <div data-ui-type="Button" data-ui-id="refresh" title="刷新"><i class="fa fa-refresh"></i></div>
 
-        <div data-ui-type="Button" data-ui-id="connectNetdisk">网盘授权</div>
+        <div data-ui-type="Button" data-ui-id="connectNetdisk" title="网盘授权"><i class="fa fa-link"></i></div>
 
         <div data-ui-type="SimpleToggleButton" data-ui-id="unread-only" >未读</div>
 
