--- a/src/client/src/mail/view.tpl.html
+++ b/src/client/src/mail/view.tpl.html
@@ -41,9 +41,9 @@
     <div class="mail-subject">
         <h2 title="${email.subject}">
             <!-- if: ${email.is_star} -->
-            <ins class="x-icon-star-lit4"></ins>
+            <i class="fa fa-star"></i>
             <!-- else -->
-            <ins class="x-icon-star4"></ins>
+            <i class="fa fa-star-o"></i>
             <!-- /if -->
 
             <!-- if: ${email.subject} -->
