--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,6 +5,7 @@
     <title>伊妹儿</title>
     <link rel="shortcut icon" href="src/common/img/favicon2.png" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <link href="src/third_party/google-fonts/Playball.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="src/third_party/font-awesome/4.2.0/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="src/common/css/main.less" />
     <script src="src/third_party/jquery/jquery.js"></script>
@@ -13,17 +14,19 @@
 </head>
 
 <body>
-<div class="header">
-    <a class="logo" href="#"><img alt="" title="" src="src/common/img/logo.png" width="177" height="34"></a>
-    <ul id="nav" class="nav"></ul>
+<header>
+    <div class="x-logo">
+        <i class="fa fa-envelope fa-3"></i>
+        <em>Mailer</em>
+    </div>
     <div class="user-info">
         <a href="#/user/settings">用户设置</a>
         &nbsp;|&nbsp;
         <a href="http://git.baidu.com/baidu/email/issues" target="_blank">Gitlab</a>
     </div>
-</div>
+</header>
 
-<div id="loading" style="display:none"><span>Loading...</span></div>
+<div id="loading" style="display:none"><i class="fa fa-spinner"></i></div>
 
 <div class="main-area">
     <div id="main"></div>
