Add Playfair Display fonts

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="src/common/img/favicon2.png" type="image/png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link href="src/third_party/google-fonts/Playball.css" rel="stylesheet" type="text/css">
+    <link href="src/third_party/google-fonts/Playfair Display.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="src/third_party/font-awesome/4.2.0/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="src/common/css/main.less" />
     <script src="src/third_party/jquery/jquery.js"></script>
