初次启动的时候，自动跳转到设置页面可以正常工作了

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,11 +17,10 @@
 <body>
 <header>
     <div class="x-logo">
-        <i class="fa fa-envelope fa-3"></i>
-        <em>Mailer</em>
+        <a href="#/mail/inbox"><i class="fa fa-envelope fa-3"></i><em>Mailer</em></a>
     </div>
     <div class="user-info">
-        <a href="#/user/settings">用户设置</a>
+        <a href="#/user/settings">账户设置</a>
         &nbsp;|&nbsp;
         <a href="http://git.baidu.com/baidu/email/issues" target="_blank">Gitlab</a>
     </div>
@@ -30,7 +29,7 @@
 <div id="loading" style="display:none"><i class="fa fa-spinner"></i></div>
 
 <div class="main-area">
-    <div id="main"></div>
+    <div id="main"><center><i class="fa fa-spinner fa-4 fa-spin"></i></center></div>
     <div class="copyright">©2014 Baidu</div>
 </div>
 
